Bug 301133 - Unhide the linked resources locations tab in the Linked Resources property page

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -615,8 +615,8 @@ ProjectLinkedResourcePage_pathVariableTabTitle=Path Variables
 ProjectLinkedResourcePage_linkedResourcesTabTitle=Linked Resources
 
 # --- Linked Resource Editor ---
-LinkedResourceEditor_editLinkedLocation=Edit Location..
-LinkedResourceEditor_convertToVariableLocation=Convert To Absolute/Relative
+LinkedResourceEditor_editLinkedLocation=&Edit...
+LinkedResourceEditor_convertToVariableLocation=&Convert
 LinkedResourceEditor_resourceName=Resource Name
 LinkedResourceEditor_path=Path
 LinkedResourceEditor_location=Location
@@ -631,6 +631,7 @@ linkedResourceEditor_OK=OK
 LinkedResourceEditor_unableToCreateVariable=Unable to create variable ''{0}'' for location ''{1}''.
 LinkedResourceEditor_unableToFindCommonPathSegments=Unable to find common path segments for the following resources:
 LinkedResourceEditor_convertAbsolutePathLocations=Convert Absolute Path Locations to Variable Relative
+LinkedResourceEditor_descriptionBlock=Linked resources in project ''{0}'':
 
 # ==============================================================================
 # Editors
@@ -737,7 +738,6 @@ PathVariablesBlock_editVariableButton = Edi&t...
 PathVariablesBlock_removeVariableButton = &Remove
 PathVariablesBlock_nameColumn=Name
 PathVariablesBlock_valueColumn=Value
-PathVariablesBlock_resolvedValueColumn=Resolved Value
 
 PathVariableSelectionDialog_title = Select Path Variable
 PathVariableSelectionDialog_extendButton = &Extend...
