bug 300502 - Add UI for finer grained file permissions

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -605,6 +605,14 @@ ResourceInfo_fileContainerEncodingFormat = Default (&inherited from container: {
 ResourceInfo_containerEncodingFormat = &Inherited from container ({0})
 ResourceInfo_exWarning= Removing the executable flag on a directory will cause its children to become unreadable.
 ResourceInfo_edit=Edit...
+ResourceInfo_attributes=Attributes:
+ResourceInfo_permissions=Permissions:
+ResourceInfo_owner=Owner
+ResourceInfo_group=Group
+ResourceInfo_other=Other
+ResourceInfo_read=Read
+ResourceInfo_write=Write
+ResourceInfo_execute=Execute
 
 # --- Project References ---
 ProjectReferencesPage_label = Projects may refer to other projects in the workspace.\nUse this page to specify what other projects are referenced by the project.\n\n&Project references for ''{0}'':
