Bug 227252  [Help] Enhancement: Remote Assistance: Add HTTPS support

--- a/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
+++ b/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
@@ -201,6 +201,7 @@ AddICDialog_2=Add new information center
 AddICDialog_4=&Name:
 AddICDialog_5=&Host:
 AddICDialog_7=&Path:
+AddICDialog_8=&Protocol:
 AddICDialog_9=Use &default port
 AddICDialog_10=Use p&ort:
 AddICDialog_17=You must specify a Host
@@ -214,6 +215,7 @@ EditICDialog_11=&Host:
 EditICDialog_12=&Path:
 EditICDialog_13=Use &default port
 EditICDialog_14=Use p&ort:
+EditICDialog_15=&Protocol:
 
 RemoteICLabelProvider_4=Enabled
 RemoteICLabelProvider_5=Disabled
@@ -233,6 +235,7 @@ ViewICPropsDialog_10=Name:
 ViewICPropsDialog_11=Host:
 ViewICPropsDialog_12=Path:
 ViewICPropsDialog_13=Port: 
+ViewICPropsDialog_14=Protocol:
 ViewICPropsDialog_19=Status: 
 ViewICPropsDialog_20=Enabled
 ViewICPropsDialog_21=Disabled
