bug 301972 - Add UI for EFS.ATTRIBUTE_IMMUTABLE

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -550,6 +550,7 @@ StartupPreferencePage_exitPromptButton = &Confirm exit when closing last window
 # --- Info ---
 ResourceInfo_readOnly = &Read only
 ResourceInfo_executable = E&xecutable
+ResourceInfo_locked = L&ocked
 ResourceInfo_archive = Ar&chive
 ResourceInfo_derived = Deri&ved
 ResourceInfo_type = &Type:
