Bug 28471: [LinkedResources] linked folders: cannot change link

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -555,7 +555,7 @@ ResourceInfo_archive = Ar&chive
 ResourceInfo_derived = Deri&ved
 ResourceInfo_type = &Type:
 ResourceInfo_location = &Location:
-ResourceInfo_resolvedLocation = Resolved location:
+ResourceInfo_resolvedLocation = Resolved locatio&n:
 ResourceInfo_size = &Size:
 ResourceInfo_bytes = {0}  bytes
 ResourceInfo_file = File
@@ -605,7 +605,7 @@ ResourceInfo_fileContentEncodingFormat = &Default (determined from content: {0})
 ResourceInfo_fileContainerEncodingFormat = Default (&inherited from container: {0})
 ResourceInfo_containerEncodingFormat = &Inherited from container ({0})
 ResourceInfo_exWarning= Removing the executable flag on a directory will cause its children to become unreadable.
-ResourceInfo_edit=Edit...
+ResourceInfo_edit=&Edit...
 ResourceInfo_attributes=Attributes:
 ResourceInfo_permissions=Permissions:
 ResourceInfo_owner=Owner
