Bug 284447 -  [Workbench] Add custom workspace name in front of the Workbench window title

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -15,6 +15,7 @@
 #     Dina Sayed, dsayed@eg.ibm.com, IBM -  bug 269844
 #     Serge Beauchamp (Freescale Semiconductor) - [252996] Resource filters
 #     Serge Beauchamp (Freescale Semiconductor) - [229633] Group Support
+#     Markus Schorn (Wind River Systems) -  bug 284447
 ###############################################################################
 
 # package: org.eclipse.ui.ide
@@ -476,6 +477,7 @@ IDEWorkspacePreference_otherLineDelim= Ot&her:
 IDEWorkspacePreference_relatedLink = See <a>''{0}''</a> for workspace startup and shutdown preferences.
 IDEWorkspacePreference_openReferencedProjects = Open referenced projects when a project is opened
 IDEWorkspacePreference_closeUnrelatedProjectsToolTip = Close unrelated projects without prompt
+IDEWorkspacePreference_workspaceName=Workspace name (shown in window title):
 
 # --- Linked Resources ---
 LinkedResourcesPreference_explanation = Path variables specify locations in the file system. The locations of linked resources\nmay be specified relative to these path variables.
