Bug 301144 - [LinkedResources] "File and Folder Import" dialog polishing

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -484,6 +484,11 @@ LinkedResourcesPreference_explanation = Path variables specify locations in the 
 LinkedResourcesPreference_enableLinkedResources = &Enable linked resources
 LinkedResourcesPreference_linkedResourcesWarningTitle = Enabled Linked Resources
 LinkedResourcesPreference_linkedResourcesWarningMessage = You have enabled a feature which may give rise to incompatibilities if projects are shared by users of different versions of the workbench.  Please consult the documentation for further details.
+LinkedResourcesPreference_dragAndDropHandlingMessage = Drag and drop items on a folder or project
+LinkedResourcesPreference_dragAndDropVirtualFolderHandlingMessage = Drag and drop items on a virtual folder
+LinkedResourcesPreference_link=&Link
+linkedResourcesPreference_copy=&Copy
+LinkedResourcesPreference_linkAndVirtualFolder=Link and create &virtual folders
 
 # The following six keys are marked as unused by the NLS search, but they are indirectly used
 # and should be removed.
@@ -755,18 +760,26 @@ PathVariableSelectionDialog_extendButton = &Extend...
 PathVariableSelectionDialog_ExtensionDialog_title = Variable Extension
 PathVariableSelectionDialog_ExtensionDialog_description = Choose extension to {0}
 
-ImportTypeDialog_title=File and Folder Import
-ImportTypeDialog_question=Select how files and folders should be imported in the project:
-ImportTypeDialog_moveFilesAndDirectories=Move the files and directories
-ImportTypeDialog_copyFilesAndDirectories=Copy the files and directories.
-ImportTypeDialog_recreateFilesAndDirectories=Recreate the file and directory hierarchy with virtual folders and links.
-ImportTypeDialog_createLinks=Create links for each file and directory.
-ImportTypeDialog_importElementsAs=Create linked resources as relative to:
-ImportTypeDialog_automatic=<Automatic>
-ImportTypeDialog_absolutePath=<Absolute Path>
+ImportTypeDialog_title=File and Folder Operation
+ImportTypeDialog_titleFilesOnly= File Operation
+ImportTypeDialog_titleFilesLinking= Link Files
+ImportTypeDialog_question=Select how files and folders should be imported into the project:
+ImportTypeDialog_questionFilesOnly=Select how files should be imported into the project:
+ImportTypeDialog_moveFilesAndDirectories=&Move files and folders
+ImportTypeDialog_copyFilesAndDirectories=&Copy files and folders 
+ImportTypeDialog_moveFiles=&Move files
+ImportTypeDialog_copyFiles=&Copy files
+ImportTypeDialog_recreateFilesAndDirectories=Link to files and recreate folder structure with &virtual folders
+ImportTypeDialog_createLinks=&Link to files and folders
+ImportTypeDialog_linkFiles=&Link to files
+ImportTypeDialog_importElementsAs=Create link locations &relative to:
+ImportTypeDialog_importElementsAsTooltip=Link locations will be absolute path locations, rather than relative to a path variable
+ImportTypeDialog_importElementsAsTooltipSet=Link locations will be relative to a path variable, rather than absolute path locations
+ImportTypeDialog_automatic=Default
+ImportTypeDialog_absolutePath=Absolute Path
 ImportTypeDialog_editVariables=Edit Variables...
-ImportTypeDialog_alwaysPerformThisOperation=Always perform the selected operation in this context
-
+ImportTypeDialog_alwaysPerformThisOperation=&Always perform the selected operation
+ImportTypeDialog_alwaysUseLocationWhenLinkingFiles=&Always use the selected location
 # ==============================================================================
 # Editor Framework
 # ==============================================================================
