Fix for  Bug 303795 -  compatibility: Compare editor hits NPE because of missing SaveablesLifecycleListener

--- a/bundles/org.eclipse.ui.workbench/Eclipse UI/org/eclipse/ui/internal/messages.properties
+++ b/bundles/org.eclipse.ui.workbench/Eclipse UI/org/eclipse/ui/internal/messages.properties
@@ -587,6 +587,7 @@ EditorPane_pinEditor=&Pin Editor
 ExternalEditor_errorMessage = Error opening external editor ({0}).
 Save = Save
 Save_Resource = Save Resource
+Saving_Modifications = Saving modifications
 Save_All = Save All
 
 
